--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Depends:
     R (>= 4.2.0)
 Suggests:
     testthat (>= 3.0.0),
-    covr
+    covr (>= 3.6.0),
+    lintr (>= 3.3.0)
 URL: https://github.com/wwbrannon/rye
 BugReports: https://github.com/wwbrannon/rye/issues
 Encoding: UTF-8
