avoid special-casing prelude.rye; stdlib load logic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,9 @@
 export(gensym)
 export(rye_eval)
 export(rye_load_file)
-export(rye_load_prelude)
 export(rye_load_stdlib)
+export(rye_load_stdlib_files)
+export(rye_load_prelude)
 export(rye_macroexpand)
 export(rye_parse)
 export(rye_read)
