--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Depends:
 Suggests:
     testthat (>= 3.0.0),
     covr (>= 3.6.0),
-    lintr (>= 3.3.0)
+    lintr (>= 3.3.0),
+    withr (>= 2.5.0)
 URL: https://github.com/wwbrannon/rye
 BugReports: https://github.com/wwbrannon/rye/issues
 Encoding: UTF-8
