update removal of generated artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -42,13 +42,14 @@ vignettes/*.pdf
 .Renviron
 
 # pkgdown site
-docs/
-site/
+/docs/
+/site/
+/doc/
+
+/Meta/
 
 # translation temp files
 po/*~
 
 # RStudio Connect folder
 rsconnect/
-/doc/
-/Meta/
