--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: A Lisp Dialect for R
 Version: 0.0.1
 Authors@R:
     person("William", "Brannon", email = "will.brannon@gmail.com",
-           role = c("aut", "cre"),
+           role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0000-0002-1435-8535"))
 Author: William Brannon
 Maintainer: William Brannon <will.brannon@gmail.com>
