--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,8 @@ export(rye_cli)
 export(rye_default_engine)
 export(rye_install_cli)
 importFrom(R6,R6Class)
-importFrom(docopt,docopt)
+importFrom(cli,cat_line)
+importFrom(cli,cli_alert_danger)
+importFrom(optparse,OptionParser)
+importFrom(optparse,make_option)
+importFrom(optparse,parse_args)
