Refactor cons cells to R6 class RyeCons
- Replace list-based rye_cons with R6 class RyeCons (car, cdr, as_list(), parts()).
- Add r6_isinstance() and r6_issubclass() in utils.R; use r6_isinstance(x, "RyeCons") everywhere instead of inherits(x, "rye_cons").
- Parser uses RyeCons$new(); engine binds constructor and predicate inline; eval/rye-env use r6_isinstance and $parts().
- Keep rye_cons, rye_cons_p, rye_cons_as_list, rye_cons_parts as package helpers for r/call from Rye stdlib (get from globalenv).
- Check dotted-pair in format-value before environment so RyeCons prints as (a . b) not <RyeCons, R6>.
- Tests updated to r6_isinstance(x, "RyeCons").

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(rye_cli)
 export(rye_default_engine)
 export(rye_install_cli)
 importFrom(R6,R6Class)
+importFrom(R6,is.R6)
+importFrom(R6,is.R6Class)
 importFrom(cli,cat_line)
 importFrom(cli,cli_alert_danger)
 importFrom(optparse,OptionParser)
