update docs for stdlib reorganization and module/import fixes

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -39,7 +39,7 @@ articles:
   - title: Reference
     contents:
       - stdlib-list-seq
-      - stdlib-higher-order
+      - stdlib-functional
       - stdlib-predicates
       - stdlib-control
       - stdlib-strings-io
