--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,9 @@ Suggests:
     withr (>= 2.5.0),
     profvis (>= 0.3.7),
     bench (>= 1.1.2),
-    knitr,
-    rmarkdown
+    xptr (>= 1.2.0),
+    knitr (>= 1.51),
+    rmarkdown (>= 2.30)
 URL: https://github.com/wwbrannon/rye
 BugReports: https://github.com/wwbrannon/rye/issues
 Encoding: UTF-8
