--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Suggests:
     profvis (>= 0.3.7),
     bench (>= 1.1.2),
     xptr (>= 1.2.0),
+    jsonlite (>= 2.0.0),
     knitr (>= 1.51),
     rmarkdown (>= 2.30)
 URL: https://github.com/wwbrannon/rye
