--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Suggests:
     xptr (>= 1.2.0),
     jsonlite (>= 2.0.0),
     knitr (>= 1.51),
-    rmarkdown (>= 2.30)
+    rmarkdown (>= 2.30),
+    jinjar (>= 0.3.0)
 URL: https://github.com/wwbrannon/arl
 BugReports: https://github.com/wwbrannon/arl/issues
 Encoding: UTF-8
