--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,8 @@ Authors@R:
            comment = c(ORCID = "0000-0002-1435-8535"))
 Description: Provides a Scheme-inspired Lisp dialect embedded in R, with
     macros, tail-call optimization, and seamless interoperability with R
-    functions and data structures. (The name 'arl' is short for 'A Lisp for
-    R'.) Implemented in pure R with no compiled code.
+    functions and data structures. (The name 'arl' is short for 'An R Lisp.')
+    Implemented in pure R with no compiled code.
 License: MIT + file LICENSE
 Depends:
     R (>= 4.0)
@@ -26,7 +26,8 @@ Suggests:
     knitr (>= 1.51),
     rmarkdown (>= 2.30),
     jinjar (>= 0.3.0)
-URL: https://github.com/wwbrannon/arl
+URL: https://github.com/wwbrannon/arl,
+    https://doi.org/10.5281/zenodo.18740488
 BugReports: https://github.com/wwbrannon/arl/issues
 Language: en-US
 Encoding: UTF-8
